[package]
name = "stop"
version = "0.2.0"
edition = "2024"
authors = ["misaka10987 <misaka10987@outlook.com>"]
description = "Stop the program on a fatal error."
documentation = "https://github.com/misaka10987/stop"
homepage = "https://github.com/misaka10987/stop"
repository = "https://github.com/misaka10987/stop"
readme = "README.md"
keywords = ["stop", "panic", "error", "exit", "cli"]
license = "MIT"

[dependencies]
colored = { version = "3.1.1", optional = true }

[features]
default = ["colored"]
